--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.hp.core</groupId>
-	<artifactId>core-parent</artifactId>
+	<artifactId>hp-core</artifactId>
 	<packaging>pom</packaging>
 
 	<properties>
