--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,13 @@
 		</dependency> -->
 		
 		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
 			<groupId>com.hp.tools</groupId>
 			<artifactId>hp-tools-common</artifactId>
 		</dependency>
