--- a/netty/pom.xml
+++ b/netty/pom.xml
@@ -14,6 +14,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<netty.version>4.1.3.Final</netty.version>
+		<protostuff.version>1.0.10</protostuff.version>
 	</properties>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
@@ -25,6 +26,21 @@
 		<dependency>
 			<groupId>com.hp.core</groupId>
 			<artifactId>hp-core-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.hp.core</groupId>
+			<artifactId>hp-core-common</artifactId>
+		</dependency>
+		<!-- Protostuff -->
+		<dependency>
+			<groupId>com.dyuproject.protostuff</groupId>
+			<artifactId>protostuff-core</artifactId>
+			<version>${protostuff.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.dyuproject.protostuff</groupId>
+			<artifactId>protostuff-runtime</artifactId>
+			<version>${protostuff.version}</version>
 		</dependency>
 	</dependencies>
 </project>
