--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,7 +9,7 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>hp-core-common</artifactId>
-	<name>common</name>
+	<name>hp-core-common</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
