--- a/netty/pom.xml
+++ b/netty/pom.xml
@@ -9,7 +9,7 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>hp-core-netty</artifactId>
-	<name>netty</name>
+	<name>hp-core-netty</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
