--- a/mybatis/pom.xml
+++ b/mybatis/pom.xml
@@ -17,6 +17,7 @@
 		<dbcp.version>2.1.1</dbcp.version>
 		<mysql.version>6.0.5</mysql.version>
 		<mybatis.spring.version>1.3.0</mybatis.spring.version>
+		<org.yaml.version>1.20</org.yaml.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -44,6 +45,11 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>${org.yaml.version}</version>
 		</dependency>
 	</dependencies>
 </project>
