--- a/mybatis/pom.xml
+++ b/mybatis/pom.xml
@@ -17,7 +17,7 @@
 		<dbcp.version>2.1.1</dbcp.version>
 		<mysql.version>6.0.5</mysql.version>
 		<mybatis.spring.version>1.3.0</mybatis.spring.version>
-		<org.yaml.version>1.20</org.yaml.version>
+		<org.aspectj.version>1.9.0</org.aspectj.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -47,9 +47,14 @@
 			<version>${mysql.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.yaml</groupId>
-			<artifactId>snakeyaml</artifactId>
-			<version>${org.yaml.version}</version>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>${org.aspectj.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>${org.aspectj.version}</version>
 		</dependency>
 	</dependencies>
 </project>
