--- a/test/src/main/resources/config.properties
+++ b/test/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #zk common
-zk.connectString=192.168.103.58:2181
+zk.connectString=192.168.102.211:2181
 zk.basePath=/yh/rpcservice123
 zk.sessionTimeoutMs=5000
 
@@ -8,3 +8,5 @@ redis.proxy.address=192.168.102.17
 redis.proxy.auth=
 redis.proxy.readonly.address=192.168.102.17
 redis.proxy.readonly.auth=
+
+hp.core.dao.interceptor.expression=execution(* com.hp.core.test.dal.*DAO.*(..))
