--- a/task/pom.xml
+++ b/task/pom.xml
@@ -15,5 +15,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>com.hp.core</groupId>
+			<artifactId>hp-core-common</artifactId>
+		</dependency>
 	</dependencies>
 </project>
