--- a/mybatis/pom.xml
+++ b/mybatis/pom.xml
@@ -21,6 +21,10 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>com.hp.core</groupId>
+			<artifactId>hp-core-common</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 			<version>${spring.version}</version>
