--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	
-	<parent>
-		<groupId>com.hp.tools</groupId>
-		<artifactId>hp-tools</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
-	
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.hp.core</groupId>
 	<artifactId>hp-core</artifactId>
 	<packaging>pom</packaging>
+	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring.version>4.3.16.RELEASE</spring.version>
+		<junit.version>4.12</junit.version>
+		<fastjson.version>1.2.47</fastjson.version>
+		<logback.version>1.2.3</logback.version>
+		<slf4j.version>1.7.25</slf4j.version>
+		<commons-io.version>2.6</commons-io.version>
+		<commons-lang3.version>3.7</commons-lang3.version>
+		<commons-text.version>1.3</commons-text.version>
+		<commons-collections.version>3.2.2</commons-collections.version>
+		<httpclient.version>4.5.5</httpclient.version>
+		<javax.servlet-api.version>4.0.1</javax.servlet-api.version>
+		<google-collect.version>snapshot-20080530</google-collect.version>
+		<jsp-api.version>2.2</jsp-api.version>
+		<commons-beanutils.version>1.9.3</commons-beanutils.version>
+		<javax.mail.version>1.6.1</javax.mail.version>
+		<ognl.version>3.2.1</ognl.version>
 	</properties>
 
 	<dependencyManagement>
@@ -68,19 +81,33 @@
 				<artifactId>hp-core-mybatis</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-mail</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-queue</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-jsptags</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
 	<dependencies>
-	
-		<!-- <dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
-			<scope>test</scope>
+			<!-- <scope>test</scope> -->
 		</dependency>
 
-		spring start
+		<!-- spring start -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -91,16 +118,36 @@
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 
 
-		spring end
+		<!-- spring end -->
 
-		logback start
+		<!-- logback start -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.5</version>
+			<version>${slf4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
@@ -112,18 +159,12 @@
 			<artifactId>logback-classic</artifactId>
 			<version>${logback.version}</version>
 		</dependency>
-		logback end
+		<!-- logback end -->
 
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>${fastjson.version}</version>
-		</dependency> -->
-
-		
-		<dependency>
-			<groupId>com.hp.tools</groupId>
-			<artifactId>hp-tools-common</artifactId>
 		</dependency>
 
 	</dependencies>
@@ -139,5 +180,8 @@
 		<module>limiter</module>
 		<module>plugins</module>
 		<module>mybatis</module>
+		<module>mail</module>
+		<module>queue</module>
+		<module>jsptags</module>
 	</modules>
 </project>
