--- a/mybatis/pom.xml
+++ b/mybatis/pom.xml
@@ -18,6 +18,7 @@
 		<mysql.version>6.0.5</mysql.version>
 		<mybatis.spring.version>1.3.2</mybatis.spring.version>
 		<org.aspectj.version>1.9.1</org.aspectj.version>
+		<snakeyaml.version>1.21</snakeyaml.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -59,6 +60,12 @@
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
 			<version>${org.aspectj.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>${snakeyaml.version}</version>
 		</dependency>
 	</dependencies>
 </project>
