--- a/test/src/main/resources/config.properties
+++ b/test/src/main/resources/config.properties
@@ -10,3 +10,4 @@ redis.proxy.readonly.address=192.168.102.17
 redis.proxy.readonly.auth=
 
 hp.core.dao.interceptor.expression=execution(* com.hp.core.test.dal.*DAO.*(..))
+hp.core.dao.database.config = classpath:databases.yml
