--- a/mybatis/pom.xml
+++ b/mybatis/pom.xml
@@ -19,6 +19,7 @@
 		<mybatis.spring.version>1.3.2</mybatis.spring.version>
 		<org.aspectj.version>1.9.1</org.aspectj.version>
 		<snakeyaml.version>1.21</snakeyaml.version>
+		<javax.persistence.api.version>1.0.2</javax.persistence.api.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -44,6 +45,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
 			<version>${dbcp.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>persistence-api</artifactId>
+			<version>${javax.persistence.api.version}</version>
 		</dependency>
 
 		<dependency>
