--- a/test/src/main/resources/databases.yml
+++ b/test/src/main/resources/databases.yml
@@ -7,6 +7,7 @@ datasources:
            - 127.0.0.1:3306
       username: yh_test
       password: yh_test
+      maxTotal: 100
    information_schema:
       servers:
         master:
