--- a/mybatis/pom.xml
+++ b/mybatis/pom.xml
@@ -24,7 +24,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.hp.core</groupId>
-			<artifactId>hp-core-common</artifactId>
+			<artifactId>hp-core-freemarker</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
