--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>5.0.8.RELEASE</spring.version>
+		<spring-boot-version>2.0.4.RELEASE</spring-boot-version>
 		<junit.version>4.12</junit.version>
 		<fastjson.version>1.2.47</fastjson.version>
 		<logback.version>1.2.3</logback.version>
@@ -105,6 +106,13 @@
 				<groupId>com.hp.core</groupId>
 				<artifactId>hp-core-freemarker</artifactId>
 				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>${spring-boot-version}</version>
+				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
