--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
 				<version>${hp.core.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-springboot</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
 				<version>${spring-boot-version}</version>
@@ -121,7 +126,6 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
 			<!-- <scope>test</scope> -->
 		</dependency>
 
@@ -129,7 +133,6 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -202,5 +205,6 @@
 		<module>jsptags</module>
 		<module>webjars</module>
 		<module>freemarker</module>
+    <module>springboot</module>
   </modules>
 </project>
