--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -8,23 +8,29 @@
 		<artifactId>hp-core</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	
-	
-	<artifactId>hp-core-webjars</artifactId>
-	<name>hp-core-webjars</name>
+	<artifactId>hp-core-springboot</artifactId>
+	<name>hp-core-springboot</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-	
 	<dependencies>
 		<dependency>
 			<groupId>com.hp.core</groupId>
-			<artifactId>hp-core-mybatis</artifactId>
+			<artifactId>hp-core-common</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.hp.core</groupId>
-			<artifactId>hp-core-springboot</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
