--- a/test/src/main/resources/config.properties
+++ b/test/src/main/resources/config.properties
@@ -9,5 +9,4 @@ redis.proxy.auth=
 redis.proxy.readonly.address=192.168.102.17
 redis.proxy.readonly.auth=
 
-hp.core.dao.interceptor.expression=execution(* com.hp.core.test.dal.*DAO.*(..))
-hp.core.dao.database.config = classpath:databases.yml
+hp.core.dao.interceptor.expression=execution(* com.hp.core.test.dal.*DAO.*(..)) or execution(* com.hp.core.test.dal.*DAO2.*(..))
