--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<hp.core.version>0.0.1-SNAPSHOT</hp.core.version>
 		
-		<spring.version>5.0.8.RELEASE</spring.version>
 		<spring-boot-version>2.0.6.RELEASE</spring-boot-version>
 		<junit.version>4.12</junit.version>
 		<fastjson.version>1.2.47</fastjson.version>
@@ -238,6 +237,16 @@
 				<version>${hp.core.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-database</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-jdbc</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
 				<version>${spring-boot-version}</version>
@@ -329,5 +338,7 @@
 		<module>webjars</module>
 		<module>freemarker</module>
 		<module>springboot</module>
-  </modules>
+		<module>database</module>
+		<module>jdbc</module>
+	</modules>
 </project>
