--- a/jdbc/pom.xml
+++ b/jdbc/pom.xml
@@ -15,6 +15,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
-		
+		<dependency>
+			<groupId>com.hp.core</groupId>
+			<artifactId>hp-core-database</artifactId>
+		</dependency>
 	</dependencies>
 </project>
