--- a/pom.xml
+++ b/pom.xml
@@ -10,23 +10,32 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<hp.core.version>0.0.1-SNAPSHOT</hp.core.version>
-		
 		<spring-boot-version>2.1.5.RELEASE</spring-boot-version>
-		<junit.version>4.12</junit.version>
-		<fastjson.version>1.2.47</fastjson.version>
+		<fastjson.version>1.2.58</fastjson.version>
+		<commons-collections.version>3.2.2</commons-collections.version>
+		<commons-lang3.version>3.9</commons-lang3.version>
+		<ognl.version>3.2.10</ognl.version>
+		<jsp-api.version>2.3.3</jsp-api.version>
+		<commons-text.version>1.6</commons-text.version>
+		
+		
+		
+		
+		
+		<!-- 我是分割线 -->
+		
 		<logback.version>1.2.3</logback.version>
 		<slf4j.version>1.7.25</slf4j.version>
 		<commons-io.version>2.6</commons-io.version>
-		<commons-lang3.version>3.7</commons-lang3.version>
-		<commons-text.version>1.3</commons-text.version>
-		<commons-collections.version>3.2.2</commons-collections.version>
+		
+		
 		<httpclient.version>4.5.5</httpclient.version>
-		<javax.servlet-api.version>4.0.1</javax.servlet-api.version>
+		
 		<google-collect.version>snapshot-20080530</google-collect.version>
-		<jsp-api.version>2.2</jsp-api.version>
+		
 		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 		<javax.mail.version>1.6.1</javax.mail.version>
-		<ognl.version>3.2.1</ognl.version>
+		
 		<freemarker.version>2.3.28</freemarker.version>
 		
 		<mybatis.version>3.4.6</mybatis.version>
@@ -35,7 +44,6 @@
 		<mybatis.spring.version>1.3.2</mybatis.spring.version>
 		<aspectj.version>1.9.1</aspectj.version>
 		<snakeyaml.version>1.21</snakeyaml.version>
-		<javax.persistence.api.version>1.0.2</javax.persistence.api.version>
 		<netty.version>4.1.3.Final</netty.version>
 		<protostuff.version>1.0.10</protostuff.version>
 		
@@ -50,7 +58,7 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
+			<!-- <dependency>
 				<groupId>commons-fileupload</groupId>
 				<artifactId>commons-fileupload</artifactId>
 				<version>${commons-fileupload-version}</version>
@@ -60,11 +68,7 @@
 				<artifactId>commons-io</artifactId>
 				<version>${commons-io.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>org.apache.commons</groupId>
-				<artifactId>commons-text</artifactId>
-				<version>${commons-text.version}</version>
-			</dependency>
+			
 			<dependency>
 				<groupId>commons-collections</groupId>
 				<artifactId>commons-collections</artifactId>
@@ -75,22 +79,13 @@
 				<artifactId>google-collect</artifactId>
 				<version>${google-collect.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>javax.servlet.jsp</groupId>
-				<artifactId>jsp-api</artifactId>
-				<version>${jsp-api.version}</version>
-				<scope>compile</scope>
-			</dependency>
+			
 			<dependency>
 				<groupId>commons-beanutils</groupId>
 				<artifactId>commons-beanutils</artifactId>
 				<version>${commons-beanutils.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>ognl</groupId>
-				<artifactId>ognl</artifactId>
-				<version>${ognl.version}</version>
-			</dependency>
+			
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
@@ -162,16 +157,7 @@
 				<version>${curator-x-discovery.version}</version>
 			</dependency>
 			
-			<dependency>
-				<groupId>com.hp.core</groupId>
-				<artifactId>hp-core-api</artifactId>
-				<version>${hp.core.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.hp.core</groupId>
-				<artifactId>hp-core-common</artifactId>
-				<version>${hp.core.version}</version>
-			</dependency>
+			
 			<dependency>
 				<groupId>com.hp.core</groupId>
 				<artifactId>hp-core-netty</artifactId>
@@ -222,26 +208,66 @@
 				<artifactId>hp-core-queue</artifactId>
 				<version>${hp.core.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>com.hp.core</groupId>
-				<artifactId>hp-core-jsptags</artifactId>
-				<version>${hp.core.version}</version>
-			</dependency>
+			
 			<dependency>
 				<groupId>com.hp.core</groupId>
 				<artifactId>hp-core-webjars</artifactId>
 				<version>${hp.core.version}</version>
 			</dependency>
+			
+			 -->
+			
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>${commons-lang3.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-collections</groupId>
+				<artifactId>commons-collections</artifactId>
+				<version>${commons-collections.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.google.code.google-collections</groupId>
+				<artifactId>google-collect</artifactId>
+				<version>${google-collect.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>${fastjson.version}</version>
+			</dependency> 
+			<dependency>
+				<groupId>commons-beanutils</groupId>
+				<artifactId>commons-beanutils</artifactId>
+				<version>${commons-beanutils.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>ognl</groupId>
+				<artifactId>ognl</artifactId>
+				<version>${ognl.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.servlet.jsp</groupId>
+				<artifactId>javax.servlet.jsp-api</artifactId>
+				<version>${jsp-api.version}</version>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-text</artifactId>
+				<version>${commons-text.version}</version>
+			</dependency>
+
+			
+			
 			<dependency>
 				<groupId>com.hp.core</groupId>
 				<artifactId>hp-core-freemarker</artifactId>
 				<version>${hp.core.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>com.hp.core</groupId>
-				<artifactId>hp-core-springboot</artifactId>
-				<version>${hp.core.version}</version>
-			</dependency>
+			
 			<dependency>
 				<groupId>com.hp.core</groupId>
 				<artifactId>hp-core-database</artifactId>
@@ -253,29 +279,51 @@
 				<version>${hp.core.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-api</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-common</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-springboot</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-jsptags</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			
+			
+			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
 				<version>${spring-boot-version}</version>
 				<type>pom</type>
 				<scope>import</scope>
-				<exclusions>
+				<!-- <exclusions>
 					<exclusion>
 						<groupId>mysql</groupId>
 						<artifactId>mysql-connector-java</artifactId>
 					</exclusion>
-				</exclusions>
+				</exclusions> -->
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
 	<dependencies>
-		<dependency>
+		<!-- <dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<!-- <scope>test</scope> -->
+			<scope>test</scope>
 		</dependency>
 
-		<!-- spring start -->
+		spring start
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -298,9 +346,9 @@
 		</dependency>
 
 
-		<!-- spring end -->
+		spring end
 
-		<!-- logback start -->
+		logback start
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
@@ -318,12 +366,20 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 		</dependency>
-		<!-- logback end -->
+		logback end
 
+		 -->
 		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>fastjson</artifactId>
-			<version>${fastjson.version}</version>
+			 <groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-test</artifactId>
 		</dependency>
 	</dependencies>
 
