--- a/limiter/pom.xml
+++ b/limiter/pom.xml
@@ -16,6 +16,10 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>com.hp.core</groupId>
+			<artifactId>hp-core-common</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 		</dependency>
