--- a/pom.xml
+++ b/pom.xml
@@ -17,48 +17,24 @@
 		<ognl.version>3.2.10</ognl.version>
 		<jsp-api.version>2.3.3</jsp-api.version>
 		<commons-text.version>1.6</commons-text.version>
-		
-		
-		
-		
-		
-		<!-- 我是分割线 -->
-		
-		<logback.version>1.2.3</logback.version>
-		<slf4j.version>1.7.25</slf4j.version>
-		<commons-io.version>2.6</commons-io.version>
-		
-		
-		<httpclient.version>4.5.5</httpclient.version>
-		
-		<google-collect.version>snapshot-20080530</google-collect.version>
-		
-		<commons-beanutils.version>1.9.3</commons-beanutils.version>
-		<javax.mail.version>1.6.1</javax.mail.version>
-		
-		<freemarker.version>2.3.28</freemarker.version>
-		
-		<mybatis.version>3.4.6</mybatis.version>
-		<dbcp.version>2.1.1</dbcp.version>
-		<mysql.version>6.0.5</mysql.version>
-		<mybatis.spring.version>1.3.2</mybatis.spring.version>
-		<aspectj.version>1.9.1</aspectj.version>
-		<snakeyaml.version>1.21</snakeyaml.version>
-		<netty.version>4.1.3.Final</netty.version>
-		<protostuff.version>1.0.10</protostuff.version>
-		
-		<guava.version>16.0</guava.version>
+		<guava.version>28.0-jre</guava.version>
 		<aopalliance.version>1.0</aopalliance.version>
-		
-		<zk.version>3.4.12</zk.version>
-		<curator.framework.version>4.0.1</curator.framework.version>
-		<curator-x-discovery.version>4.0.1</curator-x-discovery.version>
+		<mybatis.version>3.5.1</mybatis.version>
+		<mybatis.spring.version>2.0.1</mybatis.spring.version>
+		<commons-io.version>2.6</commons-io.version>
+		<netty.version>4.1.3.Final</netty.version>
+		<protostuff.version>1.1.3</protostuff.version>
+		<zookeeper.version>3.5.5</zookeeper.version>
+		<curator.framework.version>4.2.0</curator.framework.version>
+		<curator-x-discovery.version>4.2.0</curator-x-discovery.version>
+		<google-collect.version>snapshot-20080530</google-collect.version>
+		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 		<commons-fileupload-version>1.4</commons-fileupload-version>
 	</properties>
 
 	<dependencyManagement>
 		<dependencies>
-			<!-- <dependency>
+			<dependency>
 				<groupId>commons-fileupload</groupId>
 				<artifactId>commons-fileupload</artifactId>
 				<version>${commons-fileupload-version}</version>
@@ -68,24 +44,16 @@
 				<artifactId>commons-io</artifactId>
 				<version>${commons-io.version}</version>
 			</dependency>
-			
 			<dependency>
-				<groupId>commons-collections</groupId>
-				<artifactId>commons-collections</artifactId>
-				<version>${commons-collections.version}</version>
+				<groupId>org.mybatis</groupId>
+				<artifactId>mybatis</artifactId>
+				<version>${mybatis.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.google-collections</groupId>
-				<artifactId>google-collect</artifactId>
-				<version>${google-collect.version}</version>
+				<groupId>org.mybatis</groupId>
+				<artifactId>mybatis-spring</artifactId>
+				<version>${mybatis.spring.version}</version>
 			</dependency>
-			
-			<dependency>
-				<groupId>commons-beanutils</groupId>
-				<artifactId>commons-beanutils</artifactId>
-				<version>${commons-beanutils.version}</version>
-			</dependency>
-			
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
@@ -96,127 +64,6 @@
 				<artifactId>aopalliance</artifactId>
 				<version>${aopalliance.version}</version>
 			</dependency>
-				<dependency>
-				<groupId>org.mybatis</groupId>
-				<artifactId>mybatis-spring</artifactId>
-				<version>${mybatis.spring.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.mybatis</groupId>
-				<artifactId>mybatis</artifactId>
-				<version>${mybatis.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>javax.persistence</groupId>
-				<artifactId>persistence-api</artifactId>
-				<version>${javax.persistence.api.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.dyuproject.protostuff</groupId>
-				<artifactId>protostuff-core</artifactId>
-				<version>${protostuff.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.dyuproject.protostuff</groupId>
-				<artifactId>protostuff-runtime</artifactId>
-				<version>${protostuff.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.zookeeper</groupId>
-				<artifactId>zookeeper</artifactId>
-				<version>${zk.version}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>org.slf4j</groupId>
-						<artifactId>slf4j-log4j12</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>log4j</groupId>
-						<artifactId>log4j</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>io.netty</groupId>
-						<artifactId>netty</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.curator</groupId>
-				<artifactId>curator-framework</artifactId>
-				<version>${curator.framework.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>mysql</groupId>
-				<artifactId>mysql-connector-java</artifactId>
-				<version>${mysql.version}</version>
-			</dependency>
-	
-			<dependency>
-				<groupId>org.apache.curator</groupId>
-				<artifactId>curator-x-discovery</artifactId>
-				<version>${curator-x-discovery.version}</version>
-			</dependency>
-			
-			
-			<dependency>
-				<groupId>com.hp.core</groupId>
-				<artifactId>hp-core-netty</artifactId>
-				<version>${hp.core.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.hp.core</groupId>
-				<artifactId>hp-core-redis</artifactId>
-				<version>${hp.core.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.hp.core</groupId>
-				<artifactId>hp-core-test</artifactId>
-				<version>${hp.core.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.hp.core</groupId>
-				<artifactId>hp-core-zookeeper</artifactId>
-				<version>${hp.core.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.hp.core</groupId>
-				<artifactId>hp-core-task</artifactId>
-				<version>${hp.core.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.hp.core</groupId>
-				<artifactId>hp-core-limiter</artifactId>
-				<version>${hp.core.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.hp.core</groupId>
-				<artifactId>hp-core-plugins</artifactId>
-				<version>${hp.core.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.hp.core</groupId>
-				<artifactId>hp-core-mybatis</artifactId>
-				<version>${hp.core.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.hp.core</groupId>
-				<artifactId>hp-core-mail</artifactId>
-				<version>${hp.core.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.hp.core</groupId>
-				<artifactId>hp-core-queue</artifactId>
-				<version>${hp.core.version}</version>
-			</dependency>
-			
-			<dependency>
-				<groupId>com.hp.core</groupId>
-				<artifactId>hp-core-webjars</artifactId>
-				<version>${hp.core.version}</version>
-			</dependency>
-			
-			 -->
-			
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
@@ -259,25 +106,50 @@
 				<artifactId>commons-text</artifactId>
 				<version>${commons-text.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.dyuproject.protostuff</groupId>
+				<artifactId>protostuff-core</artifactId>
+				<version>${protostuff.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.dyuproject.protostuff</groupId>
+				<artifactId>protostuff-runtime</artifactId>
+				<version>${protostuff.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.zookeeper</groupId>
+				<artifactId>zookeeper</artifactId>
+				<version>${zookeeper.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-log4j12</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>io.netty</groupId>
+						<artifactId>netty</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.curator</groupId>
+				<artifactId>curator-framework</artifactId>
+				<version>${curator.framework.version}</version>
+			</dependency>
+			
+	
+			<dependency>
+				<groupId>org.apache.curator</groupId>
+				<artifactId>curator-x-discovery</artifactId>
+				<version>${curator-x-discovery.version}</version>
+			</dependency>
 
 			
 			
-			<dependency>
-				<groupId>com.hp.core</groupId>
-				<artifactId>hp-core-freemarker</artifactId>
-				<version>${hp.core.version}</version>
-			</dependency>
-			
-			<dependency>
-				<groupId>com.hp.core</groupId>
-				<artifactId>hp-core-database</artifactId>
-				<version>${hp.core.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.hp.core</groupId>
-				<artifactId>hp-core-jdbc</artifactId>
-				<version>${hp.core.version}</version>
-			</dependency>
 			<dependency>
 				<groupId>com.hp.core</groupId>
 				<artifactId>hp-core-api</artifactId>
@@ -290,7 +162,17 @@
 			</dependency>
 			<dependency>
 				<groupId>com.hp.core</groupId>
-				<artifactId>hp-core-springboot</artifactId>
+				<artifactId>hp-core-database</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-freemarker</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-jdbc</artifactId>
 				<version>${hp.core.version}</version>
 			</dependency>
 			<dependency>
@@ -298,7 +180,66 @@
 				<artifactId>hp-core-jsptags</artifactId>
 				<version>${hp.core.version}</version>
 			</dependency>
-			
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-limiter</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-mail</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-mybatis</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-netty</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-plugins</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-queue</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-redis</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-springboot</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-task</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-test</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-webjars</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hp.core</groupId>
+				<artifactId>hp-core-zookeeper</artifactId>
+				<version>${hp.core.version}</version>
+			</dependency>
 			
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
@@ -340,10 +281,7 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context-support</artifactId>
-		</dependency>
+		
 
 
 		spring end
@@ -372,6 +310,10 @@
 		<dependency>
 			 <groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
