--- a/test/src/main/resources/config.properties
+++ b/test/src/main/resources/config.properties
@@ -4,9 +4,9 @@ zk.basePath=/yh/rpcservice123
 zk.sessionTimeoutMs=5000
 
 #redis配置
-redis.proxy.address=192.168.102.17
-redis.proxy.auth=
-redis.proxy.readonly.address=192.168.102.17
-redis.proxy.readonly.auth=
+redis.proxy.address=192.168.103.100
+redis.proxy.auth=redis9646
+redis.proxy.readonly.address=192.168.103.100
+redis.proxy.readonly.auth=redis9646
 
 hp.core.database.interceptor.expression=execution(* com.hp.core.test.dal.*DAO.*(..)) or execution(* com.hp.core.test.dal.*DAO2.*(..))
