--- a/test/src/main/resources/databases.yml
+++ b/test/src/main/resources/databases.yml
@@ -2,9 +2,9 @@ datasources:
    eie:
       servers:
          master:
-           - 192.168.102.17:3306
+           - 127.0.0.1:3306
          slave:
-           - 192.168.102.17:3306
-      username: yh_test
-      password: yh_test
+           - 127.0.0.1:3306
+      username: eie
+      password: 123456
       maxTotal: 100
