--- a/mail/pom.xml
+++ b/mail/pom.xml
@@ -16,12 +16,17 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>com.hp.core</groupId>
-			<artifactId>hp-core-common</artifactId>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.sun.mail</groupId>
-			<artifactId>javax.mail</artifactId>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 	</dependencies>
 </project>
